--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "shawandpartnersbackend",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "api-server\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[Dgithub\u001b[3~\u001b[3~\u001b[3~\u001b[3~\u001b[3~\u001b[3~\u001b[C\u001b[C\u001bb-api-server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
